feat(analysis): 표준 분석 소유권과 검증 경계 적용